@startuml
' Convertido de: BD-07-MapeamentoLogico.mmd
' Visualizar em: https://plantuml.com/

' ER Diagram - notacao Crow's Foot (entity + relacionamentos)

entity "ALUNO" {
  matricula PK : int
  nome : string
  data_nascimento : date
  email : string
  endereco_rua : string
  endereco_numero : string
  endereco_cidade : string
  endereco_uf : string
}
entity "ALUNO_TELEFONE" {
  matricula PK,FK : int
  telefone PK : string
}
entity "PROFESSOR" {
  registro PK : int
  nome : string
  titulacao : string
  sala_id FK : int
}
entity "SALA" {
  id PK : int
  bloco : string
  capacidade : int
}
entity "DISCIPLINA" {
  codigo PK : string
  nome : string
  carga_horaria : int
}
entity "TURMA" {
  codigo_disciplina PK,FK : string
  numero_turma PK : int
  semestre : string
  registro_professor FK : int
}
entity "MATRICULA" {
  matricula_aluno PK,FK : int
  codigo_disciplina PK,FK : string
  numero_turma PK,FK : int
  data_matricula : date
  nota : decimal
  situacao : string
}
ALUNO ||--o{ ALUNO_TELEFONE : possui
ALUNO ||--o{ MATRICULA : realiza
PROFESSOR |o--|| SALA : ocupa
PROFESSOR ||--o{ TURMA : leciona
DISCIPLINA ||--o{ TURMA : origina
TURMA ||--o{ MATRICULA : recebe
@enduml
